WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201106
[LFC] Box::isAnonymous() can not rely on the lack of ElementType.
https://bugs.webkit.org/show_bug.cgi?id=201106
Summary
[LFC] Box::isAnonymous() can not rely on the lack of ElementType.
alan
Reported
2019-08-23 16:51:07 PDT
TableWrapperBox is an anonymous box with "TableWrapperBox" element type.
Attachments
Patch
(4.15 KB, patch)
2019-08-23 16:55 PDT
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-08-23 16:52:30 PDT
<
rdar://problem/54660287
>
alan
Comment 2
2019-08-23 16:55:33 PDT
Created
attachment 377182
[details]
Patch
Antti Koivisto
Comment 3
2019-08-24 00:03:01 PDT
Comment on
attachment 377182
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=377182&action=review
> Source/WebCore/layout/layouttree/LayoutBox.h:202 > + bool m_isAnonymous { false }; > + > unsigned m_baseTypeFlags : 6; > bool m_hasRareData : 1;
Could include this to the bitfield below.
alan
Comment 4
2019-08-24 06:34:54 PDT
Committed
r249085
: <
https://trac.webkit.org/changeset/249085
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug