[LFC] Box::isAnonymous() can not rely on the lack of ElementType. https://bugs.webkit.org/show_bug.cgi?id=201106 <rdar://problem/54660287>

Reviewed by Antti Koivisto.

Add bool m_isAnonymous member to mark anonymous layout boxes. Anonymous boxes are not rare enough to include this variable in RareData.

* layout/layouttree/LayoutBox.h:
(WebCore::Layout::Box::setIsAnonymous):
* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::TreeBuilder::createLayoutBox):

Canonical link: https://commits.webkit.org/214808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249085 268f45cc-cd09-0410-ab3c-d52691b4dbfc